fix overflow movie title problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,6 @@ form, table {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.3em;
   font-weight: bold;
-  height: 65px;
 }
 
 .movie-details {
